# irsol-data-pipeline

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md  labeler.yml
.github/workflows/: ci.yml  labeler.yml  pre-commit.yml  pytest.yml  release.yml
docs/: README.md
docs/cli/: automations.md  cli_usage.md
docs/core/: flat_field_correction.md  slit_image_creation.md  wavelength_autocalibration.md  web_asset_compatibility.md
docs/io/: io_modules.md  output_artefacts.md
docs/maintainer/: create_a_release.md  prefect_operations.md
docs/overview/: architecture.md
docs/pipeline/: pipeline_overview.md  prefect_integration.md
docs/prefect/: automations.md
docs/user/: faq.md  installation.md  quickstart.md
documentation/: architecture.md  concepts.md  configuration.md  extending.md  info_array.md  installation.md  library-usage.md  ops-sirius-prefect.md  pipeline-flat-field-correction.md  pipeline-maintenance.md  pipeline-slit-image-generation.md  pipeline.md  prefect-introduction.md  prefect-production.md  running.md  testing.md
entrypoints/: bootstrap_variables.py  plot_fits_profile.py  process_single_measurement.py  serve_flat_field_correction_pipeline.py  serve_pipeline.py  serve_prefect_maintenance.py  serve_slit_image_pipeline.py
entrypoints/dev/: plot_fits_profile.py  process_single_measurement.py
src/irsol_data_pipeline/: __init__.py  exceptions.py  logging_config.py  version.py
src/irsol_data_pipeline/calibration/: autocalibrate.py
src/irsol_data_pipeline/cli/: __init__.py  app.py  bootstrap_variables.py  common.py  dashboard.py  flows.py  info.py  main.py  metadata.py  plot.py  prefect.py  prefect_command.py  presentation.py  serve_flat_field_correction.py  serve_maintenance.py  serve_slit_images.py  variables.py
src/irsol_data_pipeline/cli/commands/: configure_command.py  flat_field_command.py  info_command.py  plot_command.py  setup_command.py  slit_image_command.py
src/irsol_data_pipeline/cli/commands/install_command/: service_command.py
src/irsol_data_pipeline/cli/commands/prefect_command/: __init__.py  automations_command.py  configure_command.py  flows_command.py  secrets_command.py  status_command.py  variables_command.py
src/irsol_data_pipeline/cli/commands/setup_command/: server_command.py  user_command.py
src/irsol_data_pipeline/core/: config.py  metadata.py  models.py  remote_filesystem.py  solar_orientation.py
src/irsol_data_pipeline/core/calibration/: __init__.py  autocalibrate.py
src/irsol_data_pipeline/core/calibration/refdata/: ref_data4078_irsol.npy  ref_data4227_gregor.npy  ref_data4227_irsol.npy  ref_data4536_irsol.npy  ref_data4607_narrow_irsol.npy  ref_data4607_very_narrow_irsol.npy  ref_data4607_wide_irsol.npy  ref_data5140_irsol.npy  ref_data5160_gregor_4p.npy  ref_data5160_gregor_5p.npy  ref_data5886_irsol.npy  ref_data5890_gregor.npy
src/irsol_data_pipeline/core/correction/: __init__.py  analyzer.py  corrector.py
src/irsol_data_pipeline/core/slit_images/: coordinates.py  solar_data.py  z3readbd.py
src/irsol_data_pipeline/core/web_asset_compatibility/: conversion.py  discovery.py  models.py
src/irsol_data_pipeline/correction/: analyzer.py  corrector.py
src/irsol_data_pipeline/integrations/: __init__.py  piombo.py
src/irsol_data_pipeline/io/: filesystem.py  flatfield_correction_reader.py  metadata_store.py
src/irsol_data_pipeline/io/dat/: __init__.py  importer.py
src/irsol_data_pipeline/io/fits/: __init__.py  constants.py  exporter.py  importer.py  processing_history.py
src/irsol_data_pipeline/io/fits_flatfield/: __init__.py  exporter.py  importer.py
src/irsol_data_pipeline/io/flatfield/: __init__.py  exporter.py  importer.py
src/irsol_data_pipeline/io/processing_metadata/: exporter.py  importer.py
src/irsol_data_pipeline/orchestration/: decorators.py  flows.py  utils.py  variables.py
src/irsol_data_pipeline/orchestration/flows/: delete_old_prefect_data.py  flat_field_correction.py  slit_image_generation.py  tags.py
src/irsol_data_pipeline/orchestration/flows/maintenance/: __init__.py  delete_old_cache_files.py  delete_old_prefect_data.py
src/irsol_data_pipeline/pipeline/: cache_cleanup.py  day_processor.py  filesystem.py  flatfield_cache.py  flatfield_processor.py  measurement_processor.py  scanner.py  slit_images_processor.py  web_asset_compatibility.py
src/irsol_data_pipeline/plotting/: profile.py  slit.py
src/irsol_data_pipeline/prefect/: config.py  decorators.py  patch_logging.py  secrets.py  utils.py  variables.py
src/irsol_data_pipeline/prefect/automations/: __init__.py  delete_pending_flows.py  zombie_flows.py
src/irsol_data_pipeline/prefect/flows/: flat_field_correction.py  slit_image_generation.py  tags.py  web_assets_compatibility.py
src/irsol_data_pipeline/prefect/flows/maintenance/: delete_old_cache_files.py  delete_old_prefect_data.py
src/irsol_data_pipeline/slit_images/: processor.py  solar_data.py
tests/: conftest.py
tests/unit/: conftest.py  test_cli_app.py  test_cli_plot.py  test_cli_presentation.py  test_core.py  test_decorators.py  test_filesystem.py  test_fits_exporter.py  test_flows.py  test_measurement_metadata.py  test_metadata_store.py  test_prefect_variables.py  test_slit_image_generation_flows.py  utils.py
tests/unit/irsol_data_pipeline/: test_version.py
tests/unit/irsol_data_pipeline/cli/: test___init__.py  test_presentation.py
tests/unit/irsol_data_pipeline/cli/commands/: test_configure_command.py  test_flat_field_command.py  test_info_command.py  test_plot_command.py  test_setup_command.py  test_slit_image_command.py
tests/unit/irsol_data_pipeline/core/: test_models.py  test_solar_orientation.py
tests/unit/irsol_data_pipeline/integrations/: test_piombo.py
tests/unit/irsol_data_pipeline/pipeline/: test_filesystem.py  test_flatfield_cache.py  test_flatfield_processor.py  test_measurement_processor.py  test_scanner.py  test_web_asset_compatibility.py
tests/unit/irsol_data_pipeline/prefect/: test_decorators.py  test_retry.py  test_utils.py  test_variables.py
(+22 files in other folders)
