[project]
name = "irsol-data-pipeline"
dynamic = ["version"]
description = "Solar observation data processing pipeline for IRSOL"
readme = { text = "Solar observation data processing pipeline for IRSOL", content-type = "text/markdown" }
authors = [{ name = "Carlo Del Don", email = "deldoc@usi.ch" }]
requires-python = ">=3.10"
dependencies = [
    "numpy<2",
    "scipy>=1.10.0",
    "spectroflat>=2.1.0",
    "qollib>=0.1.0",
    "astropy>=5.0",
    "sunpy>=5.0",
    "prefect>=3.0.0",
    "pydantic>=2.0",
    "loguru>=0.7.0",
    "typer>=0.24.1",
    "drms>=0.7.0",
    "requests>=2.28.0",
    "matplotlib>=3.7.0",
]

[project.scripts]
irsol-configure = "irsol_data_pipeline.cli.bootstrap_variables:app"
irsol-dashboard = "irsol_data_pipeline.cli.dashboard:main"
irsol-serve-flat-field-correction = "irsol_data_pipeline.cli.serve_flat_field_correction:main"
irsol-serve-slit-images = "irsol_data_pipeline.cli.serve_slit_images:main"
irsol-serve-maintenance = "irsol_data_pipeline.cli.serve_maintenance:main"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["src/irsol_data_pipeline"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/documentation",
    "/entrypoints/dev",
    "/htmlcov",
    "/README.md",
    "/tests",
    "/uv.lock",
]

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[tool.uv]
required-version = ">=0.10.9,<0.11.0"
cache-keys = [
    { file = "pyproject.toml" },
    { git = { commit = true, tags = true } },
]

[dependency-groups]
dev = ["pre-commit>=4.5.1", "pytest>=7.0", "pytest-cov>=4.0"]
