[project]
name = "irsol-data-pipeline"
dynamic = ["version"]
description = "Solar observation data processing pipeline for IRSOL"
readme = { text = "Solar observation data processing pipeline for IRSOL", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Carlo Del Don", email = "deldoc@usi.ch" }]
maintainers = [{ name = "Carlo Del Don", email = "deldoc@usi.ch" }]
requires-python = ">=3.10, <3.12"  # python >= 3.12 seems not to work with the dependencies
dependencies = [
    "numpy<2",
    "scipy>=1.10.0",
    "spectroflat>=2.1.0",
    "qollib>=0.1.0",
    "astropy>=5.0",
    "sunpy>=5.0",
    "prefect>=3.0.0",
    "pydantic>=2.0",
    "loguru>=0.7.0",
    "cyclopts>=4.8.0",
    "drms>=0.7.0",
    "requests>=2.28.0",
    "tenacity>=8.2.0",
    "matplotlib>=3.7.0",
    "pillow>=12.1.1",
    "paramiko>=3.4.0",
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[project.scripts]
idp = "irsol_data_pipeline.cli:main"

[project.urls]
Repository = "https://github.com/irsol-locarno/irsol-data-pipeline"
Documentation = "https://github.com/irsol-locarno/irsol-data-pipeline"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["src/irsol_data_pipeline"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/documentation",
    "/entrypoints",
    "/htmlcov",
    "/tests",
    "/uv.lock",
]


[tool.ruff]
target-version = "py310"
output-format = "full"

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "B",         # flake8-bugbear
    "S",         # flake8-bandit (security)
    "UP",        # pyupgrade
    "PL",        # pylint
    "SIM",       # simplifications
]
ignore = [
    "SIM117",   # Multi with statements are allowed
    "PLC0415",  # imports are managed by isort
    "PLR0911",  # Too many return statements
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments
    "PLR0915",  # Too many statements
    "E501",     # line too long is not to be worried about
 ]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = [
    "B017",    # assert blind exceptions is ok.
    "S101",    # assert is fine in tests, Ruff. Relax.
    "S105", "S106",  # passwords in test files are ok: these are mocked passwords.
    "S108",    # temporary files manipulation in tests is ok
    "PLR2004", # magic values in tests are normal
    "ANN",     # type annotations can be loose in tests
    "D100", "D101", "D102", "D103", "D104",  # docstrings in tests? come on
    "ARG001", "ARG002",  # unused args - hello, pytest fixtures
    "SLF001",  # accessing private attrs in tests is fine
    "PLC2701", # private imports are fine in tests
    "PLR6301", # pytest uses class style even if not needed
    "RUF069",  # floating point comparison is ok in tests
    "TRY003", "EM101",  # exception messages in tests don't matter
]


[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[tool.uv]
required-version = ">=0.11.0,<0.12.0"
cache-keys = [
    { file = "pyproject.toml" },
    { git = { commit = true, tags = true } },
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest]
minversion = "9.0"
addopts = ["--color=yes", "--cov=src", "--cov-report=html", "--cov-report=term", "--cov-report=xml:coverage.xml"]
testpaths = [
    "tests",
]
